[gd_scene load_steps=17 format=3 uid="uid://bd0iud28ufumo"]

[ext_resource type="Script" path="res://Prefab/Player/player.gd" id="1_cp5mf"]
[ext_resource type="Texture2D" uid="uid://dq5akf7pt0r51" path="res://Asset/Characters/Knight/120x80_PNGSheets/_Idle.png" id="1_fwk37"]
[ext_resource type="Texture2D" uid="uid://dpss3j3fcxllx" path="res://Asset/Characters/Knight/120x80_PNGSheets/_Run.png" id="1_gc4xb"]
[ext_resource type="Texture2D" uid="uid://cx6h5la0oguuj" path="res://Asset/Characters/Knight/120x80_PNGSheets/_Jump.png" id="3_kcdql"]
[ext_resource type="AudioStream" uid="uid://b2gh6xo770ybk" path="res://Asset/Sound/8-bit-jump-001-171817.mp3" id="5_hltnp"]
[ext_resource type="Texture2D" uid="uid://yxe0u7j7q0ba" path="res://Asset/Characters/Knight/120x80_PNGSheets/_Slide.png" id="6_gnyk6"]

[sub_resource type="Animation" id="Animation_kaesr"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_fwk37")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_cvc3e"]
resource_name = "Jump"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_kcdql")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_wli4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_fwk37")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jhyp3"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gc4xb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_1qpxx"]
resource_name = "Slide"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gnyk6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0g1l"]
_data = {
"Idle": SubResource("Animation_kaesr"),
"Jump": SubResource("Animation_cvc3e"),
"RESET": SubResource("Animation_wli4p"),
"Run": SubResource("Animation_jhyp3"),
"Slide": SubResource("Animation_1qpxx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m250r"]
size = Vector2(16, 12.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w76r"]
size = Vector2(37, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rchys"]
size = Vector2(23, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p40cq"]
size = Vector2(36, 17)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cp5mf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fwk37")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u0g1l")
}

[node name="StandardCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-5, 33.875)
shape = SubResource("RectangleShape2D_m250r")

[node name="SlideCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3.5, 31)
shape = SubResource("RectangleShape2D_1w76r")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hltnp")
volume_db = -20.0

[node name="RunCol" type="Area2D" parent="."]

[node name="RunCollision" type="CollisionShape2D" parent="RunCol"]
position = Vector2(-5.5, 21)
shape = SubResource("RectangleShape2D_rchys")

[node name="CrouchCol" type="Area2D" parent="."]

[node name="CrouchCollision" type="CollisionShape2D" parent="CrouchCol"]
position = Vector2(4, 31.5)
shape = SubResource("RectangleShape2D_p40cq")

[connection signal="area_entered" from="RunCol" to="." method="_on_run_col_area_entered"]
[connection signal="area_entered" from="CrouchCol" to="." method="_on_crouch_col_area_entered"]
